[feature] : add patient

--- a/src/main/resources/templates/formPatients.html
+++ b/src/main/resources/templates/formPatients.html
@@ -18,19 +18,20 @@
     <div class="col-md-6 offset-3">
             <form method="post" th:action="@{save}" >
             <label for="nom">Nom</label>
-            <input id="nom" class="form-control" type="text" th:value="${patient.getName()}" >
+            <input id="nom" class="form-control" type="text" th:value="${patient.name}" th:field="*{patient.name}" >
+            <span th:errors="${patient.name}"></span>
 
             <label for="date_">Date de naissance</label>
-            <input id="date_" class="form-control" type="date" th:value="${patient.getDateNaissance()}" >
-
+            <input id="date_" class="form-control" type="date" th:value="${patient.dateNaissance}" th:field="*{patient.dateNaissance}" >
+                <span th:errors="${patient.dateNaissance}"></span>
             <label for="state">Malade</label>
-            <input id="state" class="form-check" type="checkbox" th:checked="${patient.isMalade()}">
+            <input id="state" class="form-check" type="checkbox" th:checked="${patient.malade}" th:field="*{patient.malade}">
+                <span th:errors="${patient.malade}"></span>
 
             <label for="score">Score</label>
-            <input id="score" class="form-control" type="text" th:value="${patient.getScore()}" >
-
+            <input id="score" class="form-control" type="text" th:value="${patient.score}" th:field="*{patient.score}">
+                <span th:errors="${patient.score}"></span>
                 <button type="submit" class="btn btn-primary ">Save</button>
-
         </form>
     </div>
 </div>
