--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -32,7 +32,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/formPatients}">Add new patient</a></li>
-                        <li><a class="dropdown-item" href="@{/index}">Search</a></li>
+                        <li><a class="dropdown-item" th:href="@{/patients}">Search</a></li>
                     </ul>
                 </li>
 
@@ -44,7 +44,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/formPatients}">Profile</a></li>
-                        <li><a class="dropdown-item" href="@{/index}">Log out</a></li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Log out</a></li>
                     </ul>
                 </li>
             </ul>
