feature : edit patients

--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -43,6 +43,7 @@
                         <td th:text="${p.getScore()}"></td>
                         <td>
                                 <a onclick="return confirm('Are you sure you want to delete it?????')" th:href="@{delete(id = ${p.getId()}, keyword = ${keyword}, page = ${page})}" class="btn btn-danger"  ><i class="bi bi-trash" ></i></a>
+                            <a th:href="@{editPatients(id = ${p.getId()}, keyword = ${keyword}, page = ${page})}" class="btn btn-success"  ><i class="bi bi-pen" ></i></a>
                         </td>
                     </tr>
                 </table>
@@ -53,7 +54,7 @@
             <li th:each="page,status:${pages}">
                 <a th:href="@{/patients(page = ${status.index} , keyword = ${keyword})}"
                    th:class="${currentPage==status.index?'btn btn-info ms-1':'btn btn-outline-info ms-1'}"
-                   th:text="${status.index}"></a>
+                   th:text="${status.index + 1}"></a>
             </li>
         </ul>
     </div>
